// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple images 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
>
  <Image
    source={
      Object {
        "uri": "http://foo.com/bar.png",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "http://foo.com/baz.png",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "http://foo.com/quz.png",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "http://foo.com/qux.png",
      }
    }
  />
</View>
`;

exports[`renders multiple images that can be tapped to open in browser 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        source={
          Object {
            "uri": "http://foo.com/bar.png",
          }
        }
      />
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "http://foo.com/baz.png",
            }
          }
          style={null}
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "http://foo.com/quz.png",
            }
          }
          style={null}
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "http://foo.com/qux.png",
            }
          }
          style={null}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`returns ImageBackground 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
>
  <Image
    source={
      Object {
        "uri": "http://foo.com/bar.png",
      }
    }
  />
</View>
`;
